# CyberBERT

./: .gitignore  README.md  pyproject.toml
achived/: LICENSE  env_file_from_sessnet.txt  pyproject.toml  requirements.txt
achived/data/: test.csv  train.csv  valid.csv
achived/keras_bert_rec/: bert.py
achived/notebooks/: Untitled.ipynb  bert.ipynb  data-formatting.ipynb  test.csv  train.csv  valid.csv
binary_classification/: Binary_Classification_and_transfer_learning_with_keras_bert_MULTIPLE_MODELS.ipynb  Binary_Classification_with_Keras_Transformer_MULTIPLE_MODELS_FOR_EACH_CLASS.ipynb
malware_data/processed_data/: category dict.docx  test.csv  test_Adware.csv  test_Backdoor.csv  test_Downloader.csv  test_Dropper.csv  test_Spyware.csv  test_Trojan.csv  test_Virus.csv  test_Worms.csv  test_multiclass.csv  train.csv  train_multiclass.csv  train_over.csv  train_over_Adware.csv  train_over_Backdoor.csv  train_over_Downloader.csv  train_over_Dropper.csv  train_over_Spyware.csv  train_over_Trojan.csv  train_over_Virus.csv  train_over_Worms.csv  valid.csv  valid_multiclass.csv  valid_over.csv  valid_over_Adware.csv  valid_over_Backdoor.csv  valid_over_Downloader.csv  valid_over_Dropper.csv  valid_over_Spyware.csv  valid_over_Trojan.csv  valid_over_Virus.csv  valid_over_Worms.csv  vocab.txt
multiclass_classification/: Classification_and_transfer_learning_with_keras_bert_MULTICLASS.ipynb  Classification_with_Keras_Transformer_MULTICLASS.ipynb
notebooks/: data-formatting.ipynb
notebooks/.ipynb_checkpoints/: data-formatting-checkpoint.ipynb
preprocessing_notebook/: Process_Malware_Data_With_Balancing_for_Binary_Classification.ipynb
(+6 files in other folders)
